# upcase-diff-parser

./: .ghci  .gitignore  README.md  circle.yml  main.hs  upcase-diff-parser.cabal
.halcyon/: constraints
files/: example.json
src/Data/Aeson/TH/: Options.hs  Util.hs
src/Text/Diff/Parse/: Instances.hs
src/Upcase/: DiffParser.hs
src/Upcase/DiffParser/: App.hs
test/Upcase/: DiffParserSpec.hs
test/Upcase/DiffParser/: AppSpec.hs
