name:                   upcase-diff-parser
version:                0.0.0
author:                 Joe Ferris <jferris@thoughtbot.com>
maintainer:             Joe Ferris <jferris@thoughtbot.com>
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Upcase.DiffParser
                      , Upcase.DiffParser.App
  build-depends:        base >= 4 && < 5
                      , diff-parse
                      , aeson >= 0.8 && < 0.9
                      , yesod-core >= 1.4 && < 1.5
                      , text > 0.10 && < 1.3
                      , conduit
                      , conduit-extra
  extensions:           QuasiQuotes
                        TypeFamilies
                        TemplateHaskell
                        MultiParamTypeClasses
                        OverloadedStrings

executable upcase-diff-parser
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall
  build-depends:        base
                      , upcase-diff-parser
                      , warp >= 3.0 && < 3.1

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , upcase-diff-parser
                      , hspec
                      , text
